Blackpurl/src/objects/Fusion_Benchmarking__c.object
<CustomObject>
    <fields>
        <fullName>Average_Technician_Prime_Labor_Cost__c</fullName>
        <label>Average Technician Prime Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_No_Administration_Other__c</fullName>
        <label>Employee No. Administration &amp; Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_No_Parts__c</fullName>
        <label>Employee No. Parts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_No_Sales__c</fullName>
        <label>Employee No. Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_No_Service_Non_Technical__c</fullName>
        <label>Employee No. Service Non-Technical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_No_Service_Technical__c</fullName>
        <label>Employee No. Service Technical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Insurance_Contracts_Written__c</fullName>
        <label>No: Insurance Contracts Written</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Sales_People__c</fullName>
        <label>No. Sales People</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Working_Days__c</fullName>
        <label>No. of Working Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_days_in_Period__c</fullName>
        <label>Working days in Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Fusion Benchmarking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FBN-{00000000}</displayFormat>
        <label>Fusion Benchmarking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fusion Benchmarking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>